tests/baselines/reference/privateNamesNotAllowedAsParameters.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesNotAllowedAsParameters.ts(2,12): error TS18009: Private identifiers cannot be used as parameters.


==== tests/cases/conformance/classes/members/privateNames/privateNamesNotAllowedAsParameters.ts (1 errors) ====
    class A {
        setFoo(#foo: string) {}
               ~~~~
!!! error TS18009: Private identifiers cannot be used as parameters.
    }
    